--- a/src/main/resources/templates/pages/charts.html
+++ b/src/main/resources/templates/pages/charts.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<div class="container-fluid" layout:fragment="content">
+<div class="container" layout:fragment="content">
 
     <!-- Area Chart Example-->
     <div class="card mb-3">
