--- a/src/main/resources/templates/pages/devices.html
+++ b/src/main/resources/templates/pages/devices.html
@@ -8,7 +8,7 @@
 <head>
 </head>
 <body>
-<div class="container-fluid" layout:fragment="content">
+<div class="container" layout:fragment="content">
 
     <!-- DataTables Example -->
     <div class="card mb-3">
