--- a/src/main/resources/templates/layout/administrative.html
+++ b/src/main/resources/templates/layout/administrative.html
@@ -20,7 +20,8 @@
         <!-- HEADER -->
         <header>
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <a class="navbar-brand" th:href="@{/dashboard}">SLAM</a>
+                <div class="container">
+                <a class="navbar-brand" th:href="@{/dashboard}"><img src="/images/logo.png" height="50" class="img-responsive"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -41,6 +42,7 @@
 <!--                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">-->
                         <button class="btn btn-outline-danger my-2 my-sm-0" type="submit"><i class="fas fa-sign-out-alt"></i> Sair</button>
                     </form>
+                </div>
                 </div>
             </nav>
         </header>
