--- a/src/main/resources/templates/pages/dashboard.html
+++ b/src/main/resources/templates/pages/dashboard.html
@@ -9,15 +9,13 @@
 </head>
 <body>
 
-<div class="container-fluid" layout:fragment="content">
-
-
+<div class="container" layout:fragment="content">
     <!-- Icon Cards-->
     <div class="row">
         <div class="col-xl-3 col-sm-6 mb-3">
             <div class="card text-white bg-primary o-hidden h-100">
                 <div class="card-body">
-                    <div class="card-body-icon">
+                    <div class="card-body-icon float-right">
                         <i class="fas fa-fw fa-mobile"></i>
                     </div>
                     <div class="mr-5">Dispositivos</div>
@@ -33,7 +31,7 @@
         <div class="col-xl-3 col-sm-6 mb-3">
             <div class="card text-white bg-warning o-hidden h-100">
                 <div class="card-body">
-                    <div class="card-body-icon">
+                    <div class="card-body-icon float-right">
                         <i class="fas fa-fw fa-link"></i>
                     </div>
                     <div class="mr-5">Corrente</div>
@@ -41,15 +39,15 @@
                 <a class="card-footer text-white clearfix small z-1" href="#">
                     <span class="float-left">Ver detalhes</span>
                     <span class="float-right">
-                                        <i class="fas fa-angle-right"></i>
-                                    </span>
+                        <i class="fas fa-angle-right"></i>
+                    </span>
                 </a>
             </div>
         </div>
         <div class="col-xl-3 col-sm-6 mb-3">
             <div class="card text-white bg-success o-hidden h-100">
                 <div class="card-body">
-                    <div class="card-body-icon">
+                    <div class="card-body-icon float-right">
                         <i class="fas fa-fw fa-bolt"></i>
                     </div>
                     <div class="mr-5">Tensão</div>
@@ -57,15 +55,15 @@
                 <a class="card-footer text-white clearfix small z-1" href="#">
                     <span class="float-left">Ver detalhes</span>
                     <span class="float-right">
-                                        <i class="fas fa-angle-right"></i>
-                                    </span>
+                        <i class="fas fa-angle-right"></i>
+                    </span>
                 </a>
             </div>
         </div>
         <div class="col-xl-3 col-sm-6 mb-3">
             <div class="card text-white bg-danger o-hidden h-100">
                 <div class="card-body">
-                    <div class="card-body-icon">
+                    <div class="card-body-icon float-right">
                         <i class="fas fa-fw fa-power-off"></i>
                     </div>
                     <div class="mr-5">Potência</div>
@@ -73,8 +71,8 @@
                 <a class="card-footer text-white clearfix small z-1" href="#">
                     <span class="float-left">Ver detalhes</span>
                     <span class="float-right">
-                                        <i class="fas fa-angle-right"></i>
-                                    </span>
+                        <i class="fas fa-angle-right"></i>
+                    </span>
                 </a>
             </div>
         </div>
@@ -86,11 +84,67 @@
             <i class="fas fa-chart-area"></i>&nbsp;Consumo Mensal
         </div>
         <div class="card-body">
-            <canvas id="myAreaChart" width="100%" height="30"></canvas>
+            <canvas id="consumeChart" width="400" height="200"></canvas>
         </div>
         <div class="card-footer small text-muted">Atualizado em 11:59 PM</div>
     </div>
 
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
+    <script>
+        var ctx = document.getElementById('consumeChart').getContext('2d');
+        var consumeChart = new Chart(ctx, {
+            type: 'bar',
+            data: {
+                labels: ['Janeiro', 'Março', 'Abril', 'Maio', 'Junho', 'Julho', 'Agosto', 'Setembro', 'Outubro', 'Novembro', 'Dezembro'],
+                datasets: [{
+                    data: [12, 19, 3, 5, 2, 3, 3, 5, 2, 3, 13],
+                    backgroundColor: [
+                        'rgba(255, 0, 0, 0.8)',
+                        'rgba(0, 0, 255, 0.8)',
+                        'rgba(255, 206, 86, 0.8)',
+                        'rgba(0, 255, 0, 0.8)',
+                        'rgba(153, 102, 255, 0.8)',
+                        'rgba(255, 159, 64, 0.8)',
+                        'rgba(255, 159, 64, 0.8)',
+                        'rgba(255, 159, 64, 0.8)',
+                        'rgba(255, 159, 64, 0.8)',
+                        'rgba(255, 159, 64, 0.8)',
+                        'rgba(255, 159, 64, 0.8)'
+                    ],
+                    borderColor: [
+                        'rgba(255, 0, 0, 1)',
+                        'rgba(0, 0, 255, 1)',
+                        'rgba(255, 206, 86, 1)',
+                        'rgba(0, 255, 0, 1)',
+                        'rgba(153, 102, 255, 1)',
+                        'rgba(255, 159, 64, 1)',
+                        'rgba(255, 159, 64, 1)',
+                        'rgba(255, 159, 64, 1)',
+                        'rgba(255, 159, 64, 1)',
+                        'rgba(255, 159, 64, 1)',
+                        'rgba(255, 159, 64, 1)'
+                    ],
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                scales: {
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero: true
+                        }
+                    }]
+                },
+                title: {
+                    display: false,
+                },
+                legend: {
+                    display: false,
+                }
+            }
+        });
+    </script>
 
 </div>
 
