--- a/src/main/resources/templates/pages/dashboard.html
+++ b/src/main/resources/templates/pages/dashboard.html
@@ -16,64 +16,40 @@
             <div class="card text-white bg-primary o-hidden h-100">
                 <div class="card-body">
                     <div class="card-body-icon float-right">
-                        <i class="fas fa-fw fa-mobile"></i>
+                        30
                     </div>
                     <div class="mr-5">Dispositivos</div>
                 </div>
-                <a class="card-footer text-white clearfix small z-1" th:href="@{/devices}">
-                    <span class="float-left">Ver detalhes</span>
-                    <span class="float-right">
-                        <i class="fas fa-angle-right"></i>
-                    </span>
-                </a>
             </div>
         </div>
         <div class="col-xl-3 col-sm-6 mb-3">
             <div class="card text-white bg-warning o-hidden h-100">
                 <div class="card-body">
                     <div class="card-body-icon float-right">
-                        <i class="fas fa-fw fa-link"></i>
+                        10 A
                     </div>
                     <div class="mr-5">Corrente</div>
                 </div>
-                <a class="card-footer text-white clearfix small z-1" href="#">
-                    <span class="float-left">Ver detalhes</span>
-                    <span class="float-right">
-                        <i class="fas fa-angle-right"></i>
-                    </span>
-                </a>
             </div>
         </div>
         <div class="col-xl-3 col-sm-6 mb-3">
             <div class="card text-white bg-success o-hidden h-100">
                 <div class="card-body">
                     <div class="card-body-icon float-right">
-                        <i class="fas fa-fw fa-bolt"></i>
+                        127 V
                     </div>
                     <div class="mr-5">Tensão</div>
                 </div>
-                <a class="card-footer text-white clearfix small z-1" href="#">
-                    <span class="float-left">Ver detalhes</span>
-                    <span class="float-right">
-                        <i class="fas fa-angle-right"></i>
-                    </span>
-                </a>
             </div>
         </div>
         <div class="col-xl-3 col-sm-6 mb-3">
             <div class="card text-white bg-danger o-hidden h-100">
                 <div class="card-body">
                     <div class="card-body-icon float-right">
-                        <i class="fas fa-fw fa-power-off"></i>
+                        <span>200 KW</span>
                     </div>
                     <div class="mr-5">Potência</div>
                 </div>
-                <a class="card-footer text-white clearfix small z-1" href="#">
-                    <span class="float-left">Ver detalhes</span>
-                    <span class="float-right">
-                        <i class="fas fa-angle-right"></i>
-                    </span>
-                </a>
             </div>
         </div>
     </div>
