--- a/src/main/resources/templates/layout/administrative.html
+++ b/src/main/resources/templates/layout/administrative.html
@@ -38,6 +38,9 @@
                         <li class="nav-item" th:classappend="${#strings.contains(#httpServletRequest.requestURI,'devices')}?'active':''">
                             <a class="nav-link"  th:href="@{/devices}">Dispositivos</a>
                         </li>
+                        <li class="nav-item" th:classappend="${#strings.contains(#httpServletRequest.requestURI,'devices')}?'active':''">
+                            <a class="nav-link"  th:href="@{/about}">Sobre</a>
+                        </li>
                     </ul>
                     <form class="form-inline my-2 my-lg-0">
 <!--                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">-->
