--- a/src/main/resources/templates/layout/administrative.html
+++ b/src/main/resources/templates/layout/administrative.html
@@ -38,7 +38,7 @@
                         <li class="nav-item" th:classappend="${#strings.contains(#httpServletRequest.requestURI,'devices')}?'active':''">
                             <a class="nav-link"  th:href="@{/devices}">Dispositivos</a>
                         </li>
-                        <li class="nav-item" th:classappend="${#strings.contains(#httpServletRequest.requestURI,'devices')}?'active':''">
+                        <li class="nav-item" th:classappend="${#strings.contains(#httpServletRequest.requestURI,'about')}?'active':''">
                             <a class="nav-link"  th:href="@{/about}">Sobre</a>
                         </li>
                     </ul>
