--- a/src/main/resources/templates/pages/dashboard.html
+++ b/src/main/resources/templates/pages/dashboard.html
@@ -15,7 +15,7 @@
         <div class="col-xl-3 col-sm-6 mb-3">
             <div class="card text-white bg-primary o-hidden h-100">
                 <div class="card-body">
-                    <div class="card-body-icon float-right">
+                    <div class="card-body-icon float-right" th:text="${totalDevices}">
                         30
                     </div>
                     <div class="mr-5">Dispositivos</div>
@@ -68,6 +68,26 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
     <script>
+
+        function generateChartsColor( opacity ) {
+            return 'rgba(' + Math.floor(Math.random() * 256) + ', '+ Math.floor(Math.random() * 256) +', '+ Math.floor(Math.random() * 256) +', ' + opacity + ')';
+        }
+
+        const colors = [
+            generateChartsColor('0.8'),
+            generateChartsColor('0.8'),
+            generateChartsColor('0.8'),
+            generateChartsColor('0.8'),
+            generateChartsColor('0.8'),
+            generateChartsColor('0.8'),
+            generateChartsColor('0.8'),
+            generateChartsColor('0.8'),
+            generateChartsColor('0.8'),
+            generateChartsColor('0.8'),
+            generateChartsColor('0.8'),
+            generateChartsColor('0.8'),
+        ];
+
         var ctx = document.getElementById('consumeChart').getContext('2d');
         var consumeChart = new Chart(ctx, {
             type: 'bar',
@@ -75,32 +95,8 @@
                 labels: ['Janeiro', 'Março', 'Abril', 'Maio', 'Junho', 'Julho', 'Agosto', 'Setembro', 'Outubro', 'Novembro', 'Dezembro'],
                 datasets: [{
                     data: [12, 19, 3, 5, 2, 3, 3, 5, 2, 3, 13],
-                    backgroundColor: [
-                        'rgba(255, 0, 0, 0.8)',
-                        'rgba(0, 0, 255, 0.8)',
-                        'rgba(255, 206, 86, 0.8)',
-                        'rgba(0, 255, 0, 0.8)',
-                        'rgba(153, 102, 255, 0.8)',
-                        'rgba(255, 159, 64, 0.8)',
-                        'rgba(255, 159, 64, 0.8)',
-                        'rgba(255, 159, 64, 0.8)',
-                        'rgba(255, 159, 64, 0.8)',
-                        'rgba(255, 159, 64, 0.8)',
-                        'rgba(255, 159, 64, 0.8)'
-                    ],
-                    borderColor: [
-                        'rgba(255, 0, 0, 1)',
-                        'rgba(0, 0, 255, 1)',
-                        'rgba(255, 206, 86, 1)',
-                        'rgba(0, 255, 0, 1)',
-                        'rgba(153, 102, 255, 1)',
-                        'rgba(255, 159, 64, 1)',
-                        'rgba(255, 159, 64, 1)',
-                        'rgba(255, 159, 64, 1)',
-                        'rgba(255, 159, 64, 1)',
-                        'rgba(255, 159, 64, 1)',
-                        'rgba(255, 159, 64, 1)'
-                    ],
+                    backgroundColor: colors,
+                    borderColor: colors,
                     borderWidth: 1
                 }]
             },
