--- a/src/main/resources/templates/pages/charts.html
+++ b/src/main/resources/templates/pages/charts.html
@@ -20,7 +20,7 @@
         <div class="card-body">
             <canvas id="myAreaChart" width="100%" height="30"></canvas>
         </div>
-        <div class="card-footer small text-muted">Atualizado em 11:59 PM</div>
+        <div class="card-footer small text-muted">Atualizado em <span th:text="${#dates.format(#dates.createNow(),'dd/MM/yyyy HH:mm:ss')}"></span></div>
     </div>
 
     <div class="row">
@@ -33,7 +33,7 @@
                 <div class="card-body">
                     <canvas id="myBarChart" width="100%" height="50"></canvas>
                 </div>
-                <div class="card-footer small text-muted">Atualizado em 11:59 PM</div>
+                <div class="card-footer small text-muted">Atualizado em <span th:text="${#dates.format(#dates.createNow(),'dd/MM/yyyy HH:mm:ss')}"></span></div>
             </div>
         </div>
         <div class="col-lg-4">
@@ -45,7 +45,7 @@
                 <div class="card-body">
                     <canvas id="myPieChart" width="100%" height="100"></canvas>
                 </div>
-                <div class="card-footer small text-muted">Atualizado em 11:59 PM</div>
+                <div class="card-footer small text-muted">Atualizado em <span th:text="${#dates.format(#dates.createNow(),'dd/MM/yyyy HH:mm:ss')}"></span></div>
             </div>
         </div>
     </div>
