--- a/src/main/resources/templates/pages/devices.html
+++ b/src/main/resources/templates/pages/devices.html
@@ -56,7 +56,7 @@
                 </table>
             </div>
         </div>
-        <div class="card-footer small text-muted">Atualizado em 11:59 PM</div>
+        <div class="card-footer small text-muted">Atualizado em <span th:text="${#dates.format(#dates.createNow(),'dd/MM/yyyy HH:mm:ss')}"></span></div>
     </div>
 
 <!--TODO: verificar pq não esta funcionando-->
