pages erro login remove links scripts

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -10,14 +10,14 @@
 
     <title>SLAM - ADM</title>
 
-        <!-- Custom fonts for this template-->
-        <link th:href="@{/vendor/fontawesome-free/css/all.min.css}" rel="stylesheet" type="text/css">
+<!--        &lt;!&ndash; Custom fonts for this template&ndash;&gt;-->
+<!--        <link th:href="@{/vendor/fontawesome-free/css/all.min.css}" rel="stylesheet" type="text/css">-->
 
-        <!-- Page level plugin CSS-->
-        <link th:href="@{/vendor/datatables/dataTables.bootstrap4.css}" rel="stylesheet">
+<!--        &lt;!&ndash; Page level plugin CSS&ndash;&gt;-->
+<!--        <link th:href="@{/vendor/datatables/dataTables.bootstrap4.css}" rel="stylesheet">-->
 
-        <!-- Custom styles for this template-->
-        <link th:href="@{/css/sb-admin.css}" rel="stylesheet">
+<!--        &lt;!&ndash; Custom styles for this template&ndash;&gt;-->
+<!--        <link th:href="@{/css/sb-admin.css}" rel="stylesheet">-->
     </head>
 
     <body id="page-top">
@@ -177,13 +177,13 @@
             </div>
         </div>
 
-        <!-- Bootstrap core JavaScript-->
-        <script th:src="@{/vendor/jquery/jquery.min.js}"></script>
-        <script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+<!--        &lt;!&ndash; Bootstrap core JavaScript&ndash;&gt;-->
+<!--        <script th:src="@{/vendor/jquery/jquery.min.js}"></script>-->
+<!--        <script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>-->
 
-        <!-- Core plugin JavaScript-->
-        <script th:src="@{/vendor/jquery-easing/jquery.easing.min.js}"></script>
-        <link th:href="@{/css/sb-admin.css}" rel="stylesheet">
+<!--        &lt;!&ndash; Core plugin JavaScript&ndash;&gt;-->
+<!--        <script th:src="@{/vendor/jquery-easing/jquery.easing.min.js}"></script>-->
+<!--        <link th:href="@{/css/sb-admin.css}" rel="stylesheet">-->
 
     </body>
 </html>
