--- a/src/main/resources/templates/loginPage.html
+++ b/src/main/resources/templates/loginPage.html
@@ -10,11 +10,11 @@
 
     <title>SB Admin - Login</title>
 
-    <!-- Custom fonts for this template-->
-    <link th:href="@{/vendor/fontawesome-free/css/all.min.css}" rel="stylesheet" type="text/css">
+<!--    &lt;!&ndash; Custom fonts for this template&ndash;&gt;-->
+<!--    <link th:href="@{/vendor/fontawesome-free/css/all.min.css}" rel="stylesheet" type="text/css">-->
 
-    <!-- Custom styles for this template-->
-    <link th:href="@{/css/sb-admin.css}" rel="stylesheet">
+<!--    &lt;!&ndash; Custom styles for this template&ndash;&gt;-->
+<!--    <link th:href="@{/css/sb-admin.css}" rel="stylesheet">-->
 
 </head>
 
@@ -55,12 +55,12 @@
     </div>
 </div>
 
-<!-- Bootstrap core JavaScript-->
-<script th:src="@{/vendor/jquery/jquery.min.js}"></script>
-<script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+<!--&lt;!&ndash; Bootstrap core JavaScript&ndash;&gt;-->
+<!--<script th:src="@{/vendor/jquery/jquery.min.js}"></script>-->
+<!--<script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>-->
 
-<!-- Core plugin JavaScript-->
-<script th:src="@{/vendor/jquery-easing/jquery.easing.min.js}"></script>
+<!--&lt;!&ndash; Core plugin JavaScript&ndash;&gt;-->
+<!--<script th:src="@{/vendor/jquery-easing/jquery.easing.min.js}"></script>-->
 
 </body>
 
