--- a/src/main/resources/templates/pages/devices.html
+++ b/src/main/resources/templates/pages/devices.html
@@ -17,7 +17,7 @@
             Dispositivos</div>
         <div class="card-body">
             <div class="table-responsive">
-                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                <table class="table table-bordered" id="devices-table" width="100%" cellspacing="0">
                     <thead>
                         <tr>
                             <th>Local</th>
@@ -59,7 +59,6 @@
         <div class="card-footer small text-muted">Atualizado em <span th:text="${#dates.format(#dates.createNow(),'dd/MM/yyyy HH:mm:ss')}"></span></div>
     </div>
 
-<!--TODO: verificar pq não esta funcionando-->
     <!-- Config Modal-->
     <div class="modal fade" id="configModal" tabindex="-1" role="dialog" aria-labelledby="configModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
@@ -80,6 +79,10 @@
     </div>
 
     <script>
+        $(document).ready( function () {
+            $('#devices-table').DataTable();
+        } );
+
         function toggleStatus(token) {
             $.ajax({
                 url: '/api/v1/devices/'+token,
