correção calculo dashboard chart

--- a/src/main/resources/templates/pages/dashboard.html
+++ b/src/main/resources/templates/pages/dashboard.html
@@ -55,7 +55,7 @@
     <!-- Area Chart Example-->
     <div class="card mb-3">
         <div class="card-header">
-            <i class="fas fa-chart-area"></i>&nbsp;Consumo Mensal (KW)
+            <i class="fas fa-chart-area"></i>&nbsp;Consumo Mensal (KWh)
         </div>
         <div class="card-body">
             <canvas id="consumeChart" width="400" height="200"></canvas>
