--- a/src/main/resources/templates/pages/charts.html
+++ b/src/main/resources/templates/pages/charts.html
@@ -14,11 +14,10 @@
     <!-- Area Chart Example-->
     <div class="card mb-3">
         <div class="card-header">
-            <i class="fas fa-chart-area"></i>
-            Area Chart Example
+            <i class="fas fa-chart-bar"></i>&nbsp;Consumo Mensal (KWh)
         </div>
         <div class="card-body">
-            <canvas id="myAreaChart" width="100%" height="30"></canvas>
+            <canvas id="consumeChart" width="400" height="150"></canvas>
         </div>
         <div class="card-footer small text-muted">Atualizado em <span th:text="${#dates.format(#dates.createNow(),'dd/MM/yyyy HH:mm:ss')}"></span></div>
     </div>
