--- a/src/main/resources/templates/pages/measures.html
+++ b/src/main/resources/templates/pages/measures.html
@@ -23,7 +23,7 @@
                             <th>Voltagem (V)</th>
                             <th>Corrente (A)</th>
                             <th>Potência (KW)</th>
-                            <th>emergia</th>
+                            <th>Energia</th>
                             <th>ângulo</th>
                         </tr>
                     </thead>
@@ -33,7 +33,7 @@
                             <th>Voltagem (V)</th>
                             <th>Corrente (A)</th>
                             <th>Potência (KW)</th>
-                            <th>emergia</th>
+                            <th>Energia</th>
                             <th>ângulo</th>
                         </tr>
                     </tfoot>
