--- a/src/main/resources/templates/layout/administrative.html
+++ b/src/main/resources/templates/layout/administrative.html
@@ -76,5 +76,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
 
         <script th:src="@{/js/custom/charts.js}"></script>
+        <script th:src="@{/js/custom/devices.js}"></script>
+        <script th:src="@{/js/custom/measures.js}"></script>
     </body>
 </html>
