--- a/src/main/resources/templates/pages/devices.html
+++ b/src/main/resources/templates/pages/devices.html
@@ -45,7 +45,8 @@
                                 <td><a th:href="'/measures/' + ${device.token}" th:text="${device.device}">TV</a></td>
                                 <td th:text="${device.token}">7f9030edbd17da5b</td>
                                 <td th:text="${device.createAtString}" class="d-none d-md-none" >26/06/2019</td>
-                                <td><span th:text="${device.uptime}">0</span> dias</td>
+                                <td th:if="${device.status != T(dev.valhala.slam.enuns.DeviceStatus).OFFLINE}" ><span th:text="${device.uptime}">0</span> dias</td>
+                                <td th:if="${device.status == T(dev.valhala.slam.enuns.DeviceStatus).OFFLINE}" >OFFLINE</td>
                                 <td th:id="${ device.token }" th:if="${device.status == T(dev.valhala.slam.enuns.DeviceStatus).ATIVO}" ><button th:attrappend="onclick='toggleStatus(\'' + ${ device.token } + '\')'" style="width: 100%" class="btn btn-success">ativo</button></td>
                                 <td th:if="${device.status == T(dev.valhala.slam.enuns.DeviceStatus).CONFIGURAR}" ><a href="#" data-toggle="modal" data-target="#configModal" style="width: 100%" class="btn btn-warning">configurar</a></td>
                                 <td th:if="${device.status == T(dev.valhala.slam.enuns.DeviceStatus).OFFLINE}" ><span style="width: 100%" class="btn btn-danger">offline</span></td>
