--- a/src/main/resources/templates/pages/measures.html
+++ b/src/main/resources/templates/pages/measures.html
@@ -16,7 +16,7 @@
             <i class="fas fa-table"></i>Medidas: <span th:text="${device.device}"></span>, Local: <span th:text="${device.local}"></span></div>
         <div class="card-body">
             <div class="table-responsive">
-                <table class="table table-bordered" id="devices-table" width="100%" cellspacing="0">
+                <table id="measures-table" class="table table-bordered" width="100%" cellspacing="0">
                     <thead>
                         <tr>
                             <th>Data/Hora</th>
@@ -56,6 +56,5 @@
     </div>
 
 </div>
-
 </body>
 </html>
