--- a/src/main/resources/templates/pages/about.html
+++ b/src/main/resources/templates/pages/about.html
@@ -18,6 +18,10 @@
             Sobre
         </div>
         <div class="card-body">
+            <h2>MOTIVAÇÃO</h2>
+            <p>Com a crescente onda da conscientização social sobre o consumo consciente de recursos naturais, tendo em vista um possível esgotamento de recursos não renováveis, como por exemplo o petróleo. Um fator a ser levado em consideração não é apenas o melhor uso dos recursos energéticos, como também a qualidade energética fornecida.</p>
+
+            <h2>OBJETIVO</h2>
             <p>
                 Este projeto terá como finalidade a criação de um sistema que possibilite medir e registrar o consumo de energia, fator de potência, possibilitando uma análise do consumo de carga dos equipamentos. Através desta análise dos dados coletados os profissionais da área terão a possibilidade de traçar estratégias para otimizar o consumo de energia e proporcionar comodidade aos usuários, facilitando a identificação do perfil de consumo e sugerindo alterações para o uso consciente e sustentável de energia.
             </p>
