--- a/src/main/resources/templates/pages/charts.html
+++ b/src/main/resources/templates/pages/charts.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="row">
-        <div class="col-lg-8">
+        <div class="col-lg-7">
             <div class="card mb-3">
                 <div class="card-header">
                     <i class="fas fa-chart-bar"></i>
@@ -35,14 +35,39 @@
                 <div class="card-footer small text-muted">Atualizado em <span th:text="${#dates.format(#dates.createNow(),'dd/MM/yyyy HH:mm:ss')}"></span></div>
             </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-5">
             <div class="card mb-3">
                 <div class="card-header">
-                    <i class="fas fa-chart-pie"></i>
-                    Pie Chart Example
+                    <i class="fas fa-table"></i>
+                    Top 3 picos de consumo
                 </div>
                 <div class="card-body">
-                    <canvas id="myPieChart" width="100%" height="100"></canvas>
+                    <table class="table table-stripped table-bordered" width="100%" cellspacing="0">
+                        <thead>
+                        <tr>
+                            <th>Data</th>
+                            <th>Equipamento</th>
+                            <th>Potência</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>06/01/2021 16:43:22</td>
+                            <td>Ar condicionado 1</td>
+                            <td>1.51KW</td>
+                        </tr>
+                        <tr>
+                            <td>25/12/2020 19:58:45</td>
+                            <td>Ar condicionado 2</td>
+                            <td>1.48KW</td>
+                        </tr>
+                        <tr>
+                            <td>12/12/2020 12:05:11</td>
+                            <td>Microondas</td>
+                            <td>0.79KW</td>
+                        </tr>
+                        </tbody>
+                    </table>
                 </div>
                 <div class="card-footer small text-muted">Atualizado em <span th:text="${#dates.format(#dates.createNow(),'dd/MM/yyyy HH:mm:ss')}"></span></div>
             </div>
