--- a/src/main/resources/templates/pages/charts.html
+++ b/src/main/resources/templates/pages/charts.html
@@ -23,18 +23,20 @@
     </div>
 
     <div class="row">
-        <div class="col-lg-7">
+        <div class="col-lg-12">
             <div class="card mb-3">
                 <div class="card-header">
                     <i class="fas fa-chart-bar"></i>
-                    Bar Chart Example
+                    Voltagem
                 </div>
                 <div class="card-body">
-                    <canvas id="myBarChart" width="100%" height="50"></canvas>
+                    <canvas id="voltageChart" width="100%" height="50"></canvas>
                 </div>
                 <div class="card-footer small text-muted">Atualizado em <span th:text="${#dates.format(#dates.createNow(),'dd/MM/yyyy HH:mm:ss')}"></span></div>
             </div>
         </div>
+    </div>
+    <div class="row">
         <div class="col-lg-5">
             <div class="card mb-3">
                 <div class="card-header">
