--- a/src/main/resources/templates/pages/charts.html
+++ b/src/main/resources/templates/pages/charts.html
@@ -27,7 +27,7 @@
             <div class="card mb-3">
                 <div class="card-header">
                     <i class="fas fa-chart-bar"></i>
-                    Voltagem
+                    Tensão
                 </div>
                 <div class="card-body">
                     <canvas id="voltageChart" width="100%" height="50"></canvas>
